--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "lucide-react": "^0.487.0",
-    "next": "15.2.4",
+    "next": "^15.3.0",
     "next-view-transitions": "^0.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5"
